--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,50 +1,50 @@
-.home_wrapper{
-    background-color: #33a531;
-    font-size: calc(10px + 2vmin);
-    color: rgb(0, 0, 0);
-    width:100%;
-    height:100%;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.App-logo {
-  pointer-events: none;
-  width: 100%;
-  max-width: 30rem;
+.App {
+  text-align: center;
 }
 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
 
 .grupo-navbar{
-  background-color: #444444;
+  background-color: #000000;
   color: rgb(0, 0, 0);
-  min-height: 10vh;
-  max-width:100vw;
+  display: grid;
+  height: 4vh;
+  grid-template-columns: auto auto auto auto auto;
+  grid-gap: 8vw;
+  padding: 1vh 8vw;
+  top: 0;
   box-shadow: 0px 10px 30px;
 }
 
-.home_body {
+.Home-header {
+  background-color: #374255;
+  min-height: 94vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
-    background-color: rgb(255, 255, 255);
-    width:80vw;
-    max-width: 52rem;
-    min-width: 700px;
-    /*padding: 10vh 2vw;*/
-    height:80vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    border-radius: 2rem;
-  box-shadow: 0px 0px 44px 4px rgba(0,0,0,1);
+  color: white;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-.button {
-  background-color: #f99f31 !important;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
